# cloudmedic

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: bus.py  context.py  main.py  models.py  patient.py  telemetry.py  watchdog.py
app/agent/: core.py  llm.py  prompts.py  tools.py
app/static/: app.js  index.html  style.css
docs/: demo-video-script.md  plan.md  protopedia.md  submission-checklist.md
infra/: README.md  setup.sh
tests/: conftest.py  test_agent_scripted.py  test_api.py  test_patient.py  test_telemetry.py
