[project]
name = "cloudmedic"
version = "0.1.0"
description = "Cloud Run上のサービスを自律的に診察・応急処置し、ポストモーテムまで書くSREエージェント"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
